# SPL-Rust

./: .envrc  .gitignore  Cargo.toml  README.md  deadcode.spl  gcd.tac
spl-testfiles/optimizations/: all.spl
spl-testfiles/runtime_tests/: licm.spl
spl-testfiles/syntax_errors/: assignment_without_semicolon.spl  call_without_semicolon.spl  global_variable.spl  trailing_argument_comma.spl  trailing_parameter_comma.spl  unary_plus.spl
src/: main.rs  parser.rs
src/absyn/: absyn.rs  array_access.rs  array_type_expression.rs  assign_statement.rs  binary_expression.rs  call_statement.rs  if_statement.rs  mod.rs  parameter_definition.rs  procedure_definition.rs  type_definition.rs  unary_expression.rs  variable_definition.rs  while_statement.rs
src/base_blocks/: block_start_iter.rs  create_graph.rs  dot_graph.rs  mod.rs  phase2.rs  phase_3.rs  phaser.rs  utils.rs
src/cli/: mod.rs
src/code_gen/: mod.rs  procedure_def.rs  quadrupel.rs  utils.rs
src/interpreter/: definition_evaluator.rs  environment.rs  expression_evaluator.rs  mod.rs  statement_evaluator.rs  tac_interpreter.rs  value.rs
src/optimizations/: aeb.rs  common_subexpression_elimination.rs  constant_folding.rs  constant_propagation.rs  dead_code_elimination.rs  identities.rs  live_variables.rs  loop_optimization.rs  mod.rs  reaching_expressions.rs  reaching_expressions_BACKUP_4262.rs  reaching_expressions_BASE_4262.rs  tarjan.rs  worklist.rs
src/parser/: error.rs  mod.rs  parse_everything_else.rs  token_parser.rs  tokens.rs
src/semant/: build_symbol_table.rs  mod.rs  table_initializer.rs  utils.rs
(+5 files in other folders)
