[package]
name = "spl-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["cargo", "derive"] }
nom = "8.0.0"
colored = "3.0.0"
anyhow = "1.0.98"
rstest = "0.25.0"
regex = "1.11.1"
dialoguer = "0.11.0"
bitvec = "1.0.1"
console = { optional = true, version = "0.16.0", default-features = false, features = ["alloc", "std"] }

[features]
default = ["console-crate"]
console-crate = ["dep:console"]

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
allow_attributes = "warn"
